# agentes

./: .gitignore  CONTRIBUTING.md  README.md  autoload_skills.py  pyproject.toml  setup_ambiente.ps1  validate_catalog.py
core/: agent_wrapper.py  catalog.py  context.py  execution.py  runtime.py
especialistas/arquitetura-android/android-lifecycle-specialist/: skill.json
especialistas/arquitetura-android/android-multimodule-specialist/: skill.json
especialistas/arquitetura-android/architecture-specialist/: skill.json
especialistas/arquitetura-android/dependency-injection-specialist/: skill.json
especialistas/background-tarefas/android-background-processing-specialist/: skill.json
especialistas/background-tarefas/background-jobs-specialist/: skill.json
especialistas/build-gradle/build-release-specialist/: skill.json
especialistas/build-gradle/dependency-update-specialist/: skill.json
especialistas/build-gradle/gradle-specialist/: skill.json
especialistas/cross-cutting/android-permissions-specialist/: skill.json
especialistas/cross-cutting/document-export-specialist/: skill.json
especialistas/cross-cutting/documentation-specialist/: skill.json
especialistas/cross-cutting/localization-specialist/: skill.json
especialistas/cross-cutting/performance-specialist/: skill.json
especialistas/cross-cutting/security-specialist/: skill.json
especialistas/dados-persistencia/android-networking-specialist/: skill.json
orchestrators/workflow-orchestrator/: main.py  skill.json
tests/: conftest.py  test_agent_wrapper.py  test_catalog_and_execution.py
(+19 files in other folders)
